[package]
name = "power-meter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.3.0"
sml-rs = "0.3.0"
anyhow = "1.0.81"
sqlite = "0.34.0"
clap = { version = "4.5.3", features = ["derive"] }
clap_derive = "4.5.3"
dirs = "5.0.1"
axum = "0.7.4"
tokio = "1.36.0"
crossbeam-utils = "0.8.19"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"


[profile.release]
opt-level = 3
debug = false
lto = true
strip = true
codegen-units = 1
panic = "abort"
